--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e9a889">  <td>20/05/31 12:30:16</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.browser()[pri:0, instance:loginPage.LoginPageExample@1774679]">&gt;&gt;browser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@4976137</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>20/05/31 12:30:50</td>   <td>34353</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.closeBrowser()[pri:0, instance:loginPage.LoginPageExample@1774679]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@4976137</td>   <td></td> </tr>
-<tr bgcolor="e6e9c3">  <td>20/05/31 12:30:48</td>   <td>31948</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageExample.loginpage()[pri:0, instance:loginPage.LoginPageExample@1774679]">loginpage</td> 
+<tr bgcolor="e6e9c3">  <td>20/10/07 06:41:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginGmail.DeleteInbox()[pri:2, instance:gmailAutomation.LoginGmail@1774679]">DeleteInbox</td> 
   <td>main@4976137</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>20/10/07 06:40:47</td>   <td>-17006</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginGmail.NewAccount()[pri:1, instance:gmailAutomation.LoginGmail@1774679]">NewAccount</td> 
+  <td>main@4976137</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>20/10/07 06:41:08</td>   <td>4039</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginGmail.SentMail()[pri:3, instance:gmailAutomation.LoginGmail@1774679]">SentMail</td> 
+  <td>main@4976137</td>   <td></td> </tr>
+<tr bgcolor="e9a889">  <td>20/10/07 06:40:40</td>   <td>-23803</td> <td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.browser()[pri:0, instance:gmailAutomation.LoginGmail@1774679]">&gt;&gt;browser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@4976137</td>   <td></td> </tr>
+<tr bgcolor="e9a889">  <td>20/10/07 06:41:12</td>   <td>8046</td> <td>&nbsp;</td><td title="&lt;&lt;TestBaseClass.closeBrowser()[pri:0, instance:gmailAutomation.LoginGmail@1774679]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@4976137</td>   <td></td> </tr>
 </table>
